@@ -1,5 +1,9 @@
 2016-10-13  Natalia Portillo  <claunia@claunia.com>
 
+	* EVPD.cs: Implemented SCSI EVPD 82h
+
+2016-10-13  Natalia Portillo  <claunia@claunia.com>
+
 	* Modes.cs: Added support for SCSI MODE PAGEs 11h, 12h, 13h
 	and 14h (medium partitions)
 
